--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,6 @@ html, body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url("/img/back.jpg");
+    background-image: url("../img/back.jpg");
     overflow: hidden;
 }
